--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ console.log([1, 2, 3] === [1, 2, 3]); // false
 					<h2>Javascript</h2>
 					<h5>Spécificités</h5>
 					<ul>
-						<li>Questions: qu'affiche ce code ?</li>
+						<li>Question: qu'affiche ce code ?</li>
 					</ul>
 					<pre><code class="javascript">
 console.log('' == '0');  // ???
