--- a/index.html
+++ b/index.html
@@ -153,8 +153,15 @@
 							</ul>
 						</li>
 						<li>ECMAScript 5 est la version actuellement implémentée dans les navigateurs (Chrome, Firefox, Safari, IE10)</li>
-						<li>Souvent considéré comme un langage "pourri", on va voir aujourd'hui qu'en connaissant ses faiblesses, il devient au contraite un langage très puissant.</li>
+						<li>Souvent considéré comme un langage "sale", pas maintenable etc.</li>
+						<li>On va voir aujourd'hui qu'en connaissant ses faiblesses, il devient au contraite un langage très puissant.</li>
 					</ul>
+				</section>
+
+				<section>
+					<h2>Javascript</h2>
+					<h5>Introduction</h5>
+					<img src="images/javascript-the-good-parts-the-definitive-guide.jpg">
 				</section>
 
 				<section>
@@ -206,8 +213,20 @@ function foo() {
 
 				<section>
 					<h2>Javascript</h2>
-					<h5>Debug</h5>
-					TODO : capture d'écran Chrome Dev Tools
+					<h5>Introduction</h5>
+					<img src="images/dev-tools-1.png">
+				</section>
+
+				<section>
+					<h2>Javascript</h2>
+					<h5>Introduction</h5>
+					<img src="images/dev-tools-2.png">
+				</section>
+
+				<section>
+					<h2>Javascript</h2>
+					<h5>Introduction</h5>
+					<img src="images/dev-tools-3.png">
 				</section>
 
 				<section>
@@ -628,8 +647,12 @@ superman.name = 'Superman';
 								<li>Pas de visibilité "private" ou "protected"</li>
 							</ul>
 						</li>
-						<li>ECMAScript 6 introduit la notion de classes, mais limité à ce qu'on vient de voir</li>
+						<li>ECMAScript 6 introduit la notion de classes, mais reste limité à ce qu'on vient de voir (pas de visibilité, etc.)</li>
 					</ul>
+				</section>
+
+				<section>
+					<img src="images/AngularJS-large.png">
 				</section>
 
 				<section>
